styles/page.css
#content {
  font-family: serif;
  padding: 10px;
  max-width: 1200px;
  margin: auto;
}

.skipLink {
  display: block;
  position: absolute;
  left: 0;
  top: 0;
  background-color: white;
  padding: 4px;
  transform: translateY(-100%);
}
.skipLink:focus {
  transform: translateY(0);
}

h1, h2, h3, h4, h5, h6 {
  font-family: sans-serif;
}

footer {
  font-size: smaller;
}

img {
  padding: 10px;
  border: 1px solid black;
  
  display: block;
  margin-left: auto;
  margin-right: auto;
}
figure {
  float: right;
}
figcaption {
  margin-top: 10px;
  font-style: italic;
}

pre {
  background-color: #e9e9e9;
  
  padding: 10px;
  display: table;
}
pre.inline {
  display: inline-block;
  padding: 5px;
  margin: 0px;
}
pre.wrap {
  white-space: pre-wrap;
  word-break: break-word;
}
pre.collapse {
  white-space: normal;
}
pre p {
  margin: 0;
}
code {
  background-color: #e9e9e9;
  padding: 5px;
  margin: 0px;
}

/* Make a <div> look like a <p> -- used to avoid build-tools/build-page.py parser bug */
.p {
  margin-top: 1em;
  margin-bottom: 1em;
}

.scroll {
  overflow-x: auto;
}

.tocBox {
  border: 1px solid #bbb;
  padding: 10px;
  width: fit-content;
}
.tocHeader {
  display: block;
  font-family: sans-serif;
  font-weight: bold;
  margin-bottom: 0.5em;
}
ul.toc {
  list-style-type: none;
  padding-inline-start: 20px;
}
ul.tocRoot {
  margin-block-start: 0;
  margin-block-end: 0;
  padding-inline-start: 10px;
}
li.toc {
  
}
li.toc::before {
  content: "-";
  padding-right: 8px;
}

@media (prefers-color-scheme: dark) {
  body {
    background-color: #121212;
    color: #dcdcdc;
  }
  h1, h2, h3, h4, h5, h6 {
    color: #ccc;
  }
  
  a:link {
    color: deepskyblue;
  }
  a:visited {
    color: violet;
  }
  a:hover {
    
  }
  a:active {
    color: tomato;
  }
  
  pre, code {
    background-color: #333;
  }
  
  img {
    opacity: 0.8;
  }
  img:hover {
    opacity: initial;
  }
  
  input, textarea, select {
    background-color: #333;
    color: #dcdcdc;
    border: 1px solid #777;
  }
  button {
    background-color: #3a3a3a;
    color: #efefef;
    
    border: 1px solid #666;
    padding: 5px;
  }
  button:hover {
    background-color: #4a4a4a;
  }
  button:active {
    background-color: #2c2c2c;
  }
}

@media print {
  .skipLink {
    display: none;
  }
  body,
  h1, h2, h3, h4, h5, h6,
  a, a:link, a:visited, a:hover, a:active,
  pre, code,
  input, textarea, select, button {
    background-color: revert;
    color: revert;
  }
  
  input, textarea, select, button {
    border: revert;
    padding: revert;
  }
  
  img {
    opacity: initial;
  }
}

